data: cron update

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -230,7 +230,7 @@ series:
         dtend: 2021-11-01 20:00:00+01:00
       image: https://secure.meetupstatic.com/photos/event/1/6/c/d/600_499745837.jpeg
   - meetupcom:
-      meta_description: 'Thu, Nov 4, 6:00 PM: Are you a UX writer, UX designer, UX researcher, or are just UX curious? Come on out for the next Prague UX Writers meetup!
+      meta_description: 'Thu, Nov 4, 7:00 PM CEST: Are you a UX writer, UX designer, UX researcher, or are just UX curious? Come on out for the next Prague UX Writers meetup!
 
 
         If you have something you want to talk about or'
@@ -258,7 +258,7 @@ series:
         dtend: 2021-11-04 20:30:00+01:00
       image: https://secure.meetupstatic.com/photos/event/3/3/2/b/600_499753099.jpeg
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 4:00 PM: Tématem WUDu 2021 je důvěra, integrita a etika v UX designu. WUD bude letos kratší, večerní, a bude mít formu panelové diskuse.
+      meta_description: 'Thu, Nov 11, 5:00 PM CEST: Tématem WUDu 2021 je důvěra, integrita a etika v UX designu. WUD bude letos kratší, večerní, a bude mít formu panelové diskuse.
 
 
         Diskutovat budeme o tom, jaké otázky si mám'
@@ -286,7 +286,7 @@ series:
         dtend: 2021-11-11 20:30:00+01:00
       image: https://secure.meetupstatic.com/photos/event/a/a/7/4/600_500083636.jpeg
   - meetupcom:
-      meta_description: 'Tue, Dec 7, 5:00 PM: Due to the pandemic situation, let''s better meet outside for our walk & talk format, which is safer than sitting inside. We''ll meet at Pohořelec, and walk through couple pa'
+      meta_description: 'Tue, Dec 7, 6:00 PM CEST: Due to the pandemic situation, let''s better meet outside for our walk & talk format, which is safer than sitting inside. We''ll meet at Pohořelec, and walk through couple pa'
       og_title: UX Walk & Talk Brno in December | Meetup
       image: https://secure.meetupstatic.com/photos/event/4/d/2/4/600_500539748.jpeg
       url: https://www.meetup.com/asociace-ux/events/282115964/
@@ -335,7 +335,7 @@ series:
         dtstart: 2021-12-02 19:00:00+01:00
         dtend: 2021-12-02 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Dec 6, 5:00 PM: Otázky řečníkům můžete pokládat už nyní na https://app.sli.do/event/uoq2u7pm
+      meta_description: 'Mon, Dec 6, 6:00 PM CEST: Otázky řečníkům můžete pokládat už nyní na https://app.sli.do/event/uoq2u7pm
 
 
         18:20 – 18:30 Otevření Zoomu a volná diskuze
