--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -206,7 +206,7 @@ series:
         dtstart: 2022-03-10 17:00:00+01:00
         dtend: 2022-03-10 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Jan 13, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      meta_description: 'Thu, Jan 13, 5:00 PM CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
       og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
       url: https://www.meetup.com/czskppug/events/sgvgrsydccbrb/
       ical:
@@ -230,7 +230,7 @@ series:
         dtstart: 2022-01-13 17:00:00+01:00
         dtend: 2022-01-13 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Feb 10, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      meta_description: 'Thu, Feb 10, 5:00 PM CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
       og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
       url: https://www.meetup.com/czskppug/events/sgvgrsydcdbnb/
       ical:
@@ -254,7 +254,7 @@ series:
         dtstart: 2022-02-10 17:00:00+01:00
         dtend: 2022-02-10 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Mar 10, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      meta_description: 'Thu, Mar 10, 5:00 PM CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
       og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
       url: https://www.meetup.com/czskppug/events/sgvgrsydcfbnb/
       ical:
@@ -278,7 +278,7 @@ series:
         dtstart: 2022-03-10 17:00:00+01:00
         dtend: 2022-03-10 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Apr 14, 3:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      meta_description: 'Thu, Apr 14, 5:00 PM CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
       og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
       url: https://www.meetup.com/czskppug/events/sgvgrsydcgbsb/
       ical:
@@ -302,7 +302,7 @@ series:
         dtstart: 2022-04-14 17:00:00+02:00
         dtend: 2022-04-14 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Dec 9, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      meta_description: 'Thu, Dec 9, 5:00 PM CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
       og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
       url: https://www.meetup.com/czskppug/events/sgvgrsyccqbmb/
       ical:
