--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -6,7 +6,7 @@ series:
     image: https://secure.meetupstatic.com/photos/event/8/d/c/e/600_492396302.jpeg
   events:
   - meetupcom:
-      meta_description: 'Tue, Sep 7, 4:00 PM: Pure Storage is pleased to invite you to "Tech Careers Up-Close: Ladies edition'''' on September 7th, 2021 at 18:00 CET.
+      meta_description: 'Tue, Sep 7, 6:00 PM CEST: Pure Storage is pleased to invite you to "Tech Careers Up-Close: Ladies edition'''' on September 7th, 2021 at 18:00 CET.
 
 
         Why be there? Join us to hear from our panelists and'
@@ -109,7 +109,7 @@ series:
         dtstart: 2020-12-17 18:00:00+01:00
         dtend: 2020-12-17 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Oct 11, 6:00 AM: Innovation. A buzzword for some, daily bread for us.
+      meta_description: 'Mon, Oct 11, 8:00 AM CEST: Innovation. A buzzword for some, daily bread for us.
 
 
         It started with an innovative idea of two brilliant minds, and since then the innovative mindset has become deeply roo'
@@ -137,7 +137,7 @@ series:
         dtstart: 2021-10-11 08:00:00+02:00
         dtend: 2021-10-11 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 5:00 PM: 𝐀𝐛𝐨𝐮𝐭 𝐭𝐡𝐞 𝐭𝐚𝐥𝐤: although there is an endless number of technical questions you can be asked during an interview, there are some common patterns that come up ver'
+      meta_description: 'Thu, Nov 11, 6:00 PM CEST: 𝐀𝐛𝐨𝐮𝐭 𝐭𝐡𝐞 𝐭𝐚𝐥𝐤: although there is an endless number of technical questions you can be asked during an interview, there are some common patterns that come up ver'
       og_title: How to Nail Your Next Technical Interview | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/7/b/d/600_499466557.jpeg
       url: https://www.meetup.com/Pure-Storage-Talks/events/281401178/
@@ -162,7 +162,7 @@ series:
         dtstart: 2021-11-11 18:00:00+01:00
         dtend: 2021-11-11 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 9, 5:00 PM: PURE has landed in Prague 2 years ago and what a journey has been since then. We have proven that we are a strong company even through most difficult of times, a company th'
+      meta_description: 'Thu, Dec 9, 6:00 PM CEST: PURE has landed in Prague 2 years ago and what a journey has been since then. We have proven that we are a strong company even through most difficult of times, a company th'
       og_title: 'Story of PURE in Prague || Chapter Two: Hacking the Future of Data | Meetup'
       image: https://secure.meetupstatic.com/photos/event/a/7/8/600_500162680.jpeg
       url: https://www.meetup.com/Pure-Storage-Talks/events/282039970/
