--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -55,7 +55,7 @@ series:
         dtstart: 2021-10-07 18:30:00+02:00
         dtend: 2021-10-07 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 14, 4:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      meta_description: 'Thu, Oct 14, 6:30 PM CEST: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
       og_title: Coding session - V3  | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/281374093/
@@ -80,7 +80,7 @@ series:
         dtstart: 2021-10-14 18:30:00+02:00
         dtend: 2021-10-14 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 27, 4:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      meta_description: 'Wed, Oct 27, 6:30 PM CEST: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
       og_title: Coding session V4 | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/281669240/
@@ -105,7 +105,7 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 18, 6:00 PM: Coding Session
+      meta_description: 'Thu, Nov 18, 7:00 PM CEST: Coding Session
 
 
         Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lap'
@@ -133,7 +133,7 @@ series:
         dtstart: 2021-11-18 19:00:00+01:00
         dtend: 2021-11-18 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Nov 25, 6:00 PM: Coding Session
+      meta_description: 'Thu, Nov 25, 7:00 PM CEST: Coding Session
 
 
         Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lap'
