--- a/data/sources/api-prague.yaml
+++ b/data/sources/api-prague.yaml
@@ -6,7 +6,7 @@ series:
     image: https://secure.meetupstatic.com/photos/event/9/7/2/d/600_498578701.jpeg
   events:
   - meetupcom:
-      meta_description: 'Thu, Sep 16, 4:00 PM: ⚠️ Register via Eventbrite to get the ticket: https://www.eventbrite.com/e/superface-demo-day-self-integrating-applications-in-nodejs-tickets-169443392749
+      meta_description: 'Thu, Sep 16, 6:00 PM CEST: ⚠️ Register via Eventbrite to get the ticket: https://www.eventbrite.com/e/superface-demo-day-self-integrating-applications-in-nodejs-tickets-169443392749
 
 
         Join us in celeb'
@@ -34,7 +34,7 @@ series:
         dtstart: 2021-09-16 18:00:00+02:00
         dtend: 2021-09-16 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Nov 8, 3:00 PM: Integrate APIs with Superface in 3 lines of code. Your applications will self-integrate (and maintain the integrations) autonomously, without any proxies and gateways betwe'
+      meta_description: 'Mon, Nov 8, 4:00 PM CEST: Integrate APIs with Superface in 3 lines of code. Your applications will self-integrate (and maintain the integrations) autonomously, without any proxies and gateways betwe'
       og_title: APIs without the Pain 🚀 Superface Intro Webinar | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/1/9/6/600_499785462.jpeg
       url: https://www.meetup.com/api-prague/events/281693311/
