--- a/data/sources/cloud-native-prague.yaml
+++ b/data/sources/cloud-native-prague.yaml
@@ -6,7 +6,7 @@ series:
     image: https://secure.meetupstatic.com/photos/event/8/0/3/9/600_494792825.jpeg
   events:
   - meetupcom:
-      meta_description: 'Tue, May 18, 4:00 PM: Cloud-Native Prague #16 is here! Come join us online, share experiences and discuss successes and fuck-ups. It was a great last time, so prepare some drink and connect with'
+      meta_description: 'Tue, May 18, 6:00 PM CEST: Cloud-Native Prague #16 is here! Come join us online, share experiences and discuss successes and fuck-ups. It was a great last time, so prepare some drink and connect with'
       og_title: 'Cloud Native Prague Meetup #16 | Meetup'
       image: https://secure.meetupstatic.com/photos/event/3/8/0/e/600_496154350.jpeg
       url: https://www.meetup.com/Cloud-Native-Prague/events/278042296/
@@ -31,7 +31,7 @@ series:
         dtstart: 2021-05-18 18:00:00+02:00
         dtend: 2021-05-18 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Mar 2, 5:00 PM: Hey Cloud-natives,
+      meta_description: 'Tue, Mar 2, 6:00 PM CEST: Hey Cloud-natives,
 
         we are happy to announce another meetup with amazing talks. We will meet online, so there is no reason to change because of the stain on your old and bel'
       og_title: 'Cloud Native Prague Meetup #15 | Meetup'
@@ -58,7 +58,7 @@ series:
         dtstart: 2021-03-02 18:00:00+01:00
         dtend: 2021-03-02 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Jan 28, 5:00 PM: Hi Cloud-natives,
+      meta_description: 'Thu, Jan 28, 6:00 PM CEST: Hi Cloud-natives,
 
         we hope you are safe and sound because winter is coming. We managed to prepare some exciting agenda for another online meetup - believe us or not - number'
       og_title: 'Cloud Native Prague Meetup #14 | Meetup'
@@ -85,7 +85,7 @@ series:
         dtstart: 2021-01-28 18:00:00+01:00
         dtend: 2021-01-28 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Nov 24, 5:00 PM: Hey Cloud-natives,
+      meta_description: 'Tue, Nov 24, 6:00 PM CEST: Hey Cloud-natives,
 
         it seems like online meetups are our "new normal". Don''t be sad and come join us from your home, we will share experiences and discuss successes and f**k'
       og_title: 'Cloud Native Prague Meetup #13 | Meetup'
