--- a/data/sources/microsoft-events-prague.yaml
+++ b/data/sources/microsoft-events-prague.yaml
@@ -6,7 +6,7 @@ series:
     image: https://secure.meetupstatic.com/s/img/286374644891845767035/logo/meetup-logo-script-1200x630.png
   events:
   - meetupcom:
-      meta_description: 'Wed, Sep 22, 3:00 PM: Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your home life, and making '
+      meta_description: 'Wed, Sep 22, 5:00 PM CEST: Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your home life, and making '
       og_title: TechBaby Prague (Virtual Event) | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/1/4/4/600_498821284.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/280766905/
@@ -31,7 +31,7 @@ series:
         dtstart: 2021-09-22 17:00:00+02:00
         dtend: 2021-09-22 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Dec 3, 5:30 PM: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)
+      meta_description: 'Tue, Dec 3, 6:30 PM CEST: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)
 
 
         Hello '
@@ -59,7 +59,7 @@ series:
         dtstart: 2019-12-03 18:30:00+01:00
         dtend: 2019-12-03 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Sep 26, 3:20 PM: Save the date and register for our upcoming startup community event.
+      meta_description: 'Thu, Sep 26, 5:20 PM CEST: Save the date and register for our upcoming startup community event.
 
 
         We are excited to invite you to our second Prague Startup Day organized by Microsoft. You can look for'
@@ -87,7 +87,7 @@ series:
         dtstart: 2019-09-26 17:20:00+02:00
         dtend: 2019-09-26 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Jun 17, 2:30 PM: The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.
+      meta_description: 'Mon, Jun 17, 4:30 PM CEST: The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.
 
 
         Summer is here and it''s time to slow d'
