--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -285,7 +285,7 @@ series:
         dtstart: 2021-12-02 16:00:00+01:00
         dtend: 2021-12-02 17:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 2, 6:00 PM: Hello Maker,
+      meta_description: 'Thu, Dec 2, 7:00 PM CEST: Hello Maker,
 
 
         Join us on December 2nd for our next live event on LinkedIn, Twitter, and YouTube. This time I will be discussing Wave apps development and deployment for the'
@@ -313,7 +313,7 @@ series:
         dtstart: 2021-12-02 19:00:00+01:00
         dtend: 2021-12-02 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Jan 11, 10:00 AM: Despite the clear value potential of AI, many business stakeholders are frustrated with the slow pace of taking AI projects from proof of concept to actual implementation.
+      meta_description: 'Tue, Jan 11, 11:00 AM CEST: Despite the clear value potential of AI, many business stakeholders are frustrated with the slow pace of taking AI projects from proof of concept to actual implementation.
 
         '
       og_title: Elevating your AI Projects from PoC to Production at Speed | Meetup
