--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -296,7 +296,7 @@ series:
         dtstart: 2021-12-07 18:30:00+01:00
         dtend: 2021-12-07 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Jan 25, 5:30 PM: Get out and get social in 2022 : come out and discuss JS together!
+      meta_description: 'Tue, Jan 25, 6:30 PM CEST: Get out and get social in 2022 : come out and discuss JS together!
 
         Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
       og_title: '2022 #1 Server Side JavaScript | Meetup'
@@ -369,7 +369,7 @@ series:
         dtstart: 2022-01-25 18:30:00+01:00
         dtend: 2022-01-25 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Feb 22, 5:30 PM: Get out and get social in 2022 : come out and discuss JS together!
+      meta_description: 'Tue, Feb 22, 6:30 PM CEST: Get out and get social in 2022 : come out and discuss JS together!
 
         Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
       og_title: '2022 #2 Client-side Databases | Meetup'
