--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -1,7 +1,7 @@
 series:
   meetupcom:
     url: https://www.meetup.com/PyData-Prague/events/279339785/
-    meta_description: 'Tue, Jul 13, 4:30 PM: Hello PyData lovers,
+    meta_description: 'Tue, Jul 13, 6:30 PM CEST: Hello PyData lovers,
 
 
       it''s been a while since our last (on-line, not to mention in-person) PyData meet-up. We are sorry for not having arranged anything in the lockdown per'
